# techGiterview

./: .gitignore  DEPLOYMENT.md  DOCKER_TROUBLESHOOTING.md  LICENSE  README.md  api_connection_test.html  docker-compose.langfuse.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  main.py  nginx-server.conf  restart-frontend.sh  simple_header_test.py  start-dev.sh  start-simple.sh  start.sh  test_ai_feedback.py  test_dashboard_specific.py  test_evaluate_api.py  test_feedback.py  test_feedback_fix.py  test_fixed_analyzer.py  test_gemini_feedback.py  test_homepage.html  test_indentation_fix.js  test_indentation_verification.js  test_interview_api.py  test_interview_headers.py  test_real_gemini.py
src/backend/: .dockerignore  Dockerfile  create_tables.py  fix_schema.py  main.py  migration_add_ai_status_flags.sql  migration_add_detailed_report_features.sql  migration_sqlite_add_ai_status_flags.sql  migration_sqlite_add_detailed_report_features.sql  pyproject.toml  start.sh  techgiterview_dev.db  test_interview_start.py  test_schema_validator.py  test_tree_api_performance.py
src/backend/app/: __init__.py
src/backend/app/agents/: __init__.py  code_quality_agent.py  enhanced_question_generator.py  graph_context_builder.py  mock_interview_agent.py  question_ai_caller.py  question_file_helpers.py  question_generator.py  question_strategies.py  question_templates.py  report_generator_agent.py  (+1 more)
src/backend/tests/: debug_graph_edges.py  test_ai_connection.py  test_ai_real.py  test_graph_logic.py  verify_analyzer_scoring.py  verify_requests_edges.py
(+222 files in other folders)
