[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "aioredis>=2.0.1",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "chardet>=5.2.0",
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.26",
    "langchain-core>=0.3.68",
    "langchain-google-genai>=2.0.5",
    # "langchain-openai>=0.3.27",  # Optional - Gemini preferred
    "langgraph>=0.5.2",
    "langsmith>=0.4.5",
    "lizard>=1.17.31",
    "networkx>=3.5",
    # "openai>=1.95.1",  # Optional - Gemini preferred
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "scipy>=1.16.1",
    "sqlalchemy>=2.0.41",
    "tiktoken>=0.9.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
